kubernetes-resources/service-entry.yaml
# With this ServiceEntry, we're instructing the mesh to
# direct requests (from the mesh) for v2.example.com the mesh to 1.2.3.4 (an IP address).
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-svc-https
spec:
  hosts:
  - v2.example.com
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
  resolution: STATIC
  endpoints:
  - address: 1.2.3.4
