kubernetes-resources/virtual-service.yaml
# This VirtualService routes the example.com traffic from my-gateway
# to port 80 of the hello-world-service.
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtual-service
spec:
  gateways:
  - my-gateway
  hosts:
  - example.com
  http:
  - route:
    - destination:
        port:
          number: 80
        host: hello-world-service
      weight: 75
    - destination:
        port:
          number: 80
        host: v2.example.com
      weight: 25
